# mylib

./: .dockerignore  .gitignore  Justfile  README.md  auth_schema.sql  docker-compose.yml  nginx.conf  schema.sql
api/: .env.example  Cargo.toml  Dockerfile
api/src/: auth.rs  base36.rs  db.rs  indexer.rs  main.rs  routes.rs  search.rs
migrations/: 20260312_schema.sql  20260313_indexes.sql  20260313_popularity.sql  20260317_revisions.sql
scripts/: loader.py  sample_export.py
web/: .env.example  Dockerfile  astro.config.mjs  package-lock.json  package.json
web/.astro/: settings.json
web/public/: site.webmanifest
web/scripts/: generate-icon.mjs  generate-icons.mjs
web/src/components/: AccountButton.tsx  EditableField.tsx  ReadingShelves.tsx  ReadingStatus.tsx  SearchBox.jsx  SearchBox.tsx  SearchPortal.jsx  SearchPortal.tsx
web/src/layouts/: Layout.astro
web/src/lib/: fetchers.ts
web/src/pages/: 404.astro  index.astro  login.astro  register.astro
web/src/pages/authors/: [key].astro
web/src/pages/works/: [key].astro
web/src/pages/works/[work_slug]/: [edition_slug].astro
web/src/stores/: editing.ts  search.ts  user.ts
