[package]
name = "mylib-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }

# Search
tantivy = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"
anyhow = "1"

# Auth
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Email (Resend)
reqwest = { version = "0.12", features = ["json"] }
